# stad_tag

./: Cargo.toml  README.md  makePublic.sh
Data/games/: 137fad86-1f7f-45b6-a7e6-b1e536709ad9  2030e3ef-b77e-46ad-bc73-547db980e488  290d2e6d-6606-42d6-8ff8-6953433fa8ef  4c3b949d-90a6-4b9a-84a4-da29d3350254  55ce4df0-cba8-496a-9a75-1bde791a08f9  5d42b0cc-bfff-40db-b112-1d718ef270b1  684d3bc4-ccfd-4a75-a774-e40821314f75  f5ed6836-9653-44fb-9dbb-59bbd043e904
Static/Json_data/: root.json  test_create_game.json
Static/Public/: hej.html
Static/Public/css/: template.css
Static/Public/js/: game.js
Static/Template/: create_game.html.tera  game.html.tera  join_game.html.tera  root.html.tera  share_game.html.tera
src/: game_helpers.rs  main.rs  security.rs  templating.rs
