[package]
name = "stad_tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tera = "1.19.1"
serde_json = "1.0.106"
lazy_static = "1.4.0"
actix-files = "0.6.2"
serde = "1.0.188"  
serde_derive = "1.0"
ring = "0.16.20"
argon2 = "0.5.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
actix-multipart = "0.6.1"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]